--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
-      xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>main</title>
+    <meta charset="UTF-8">
+    <title>admin</title>
 </head>
 <body>
-<h2>회원 전용 페이지</h2>
+<h2>관리자 전용 페이지</h2>
 ID : <span sec:authentication="name"></span> <br>
 소유 권한 : <span sec:authentication="authorities"></span> <br>
 
@@ -14,6 +13,5 @@ ID : <span sec:authentication="name"></span> <br>
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
     <input type="submit" value="로그아웃"/>
 </form>
-
 </body>
 </html>
