--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -8,7 +8,7 @@
 <h1>Sign Up</h1> <hr>
 
 <form th:action="@{/user}" method="POST">
-    email : <input type="text" name="email"> <br>
+    name : <input type="text" name="name"> <br>
     password : <input type="password" name="password"> <br>
     <input type="radio" name="auth" value="ROLE_ADMIN,ROLE_USER"> admin
     <input type="radio" name="auth" value="ROLE_USER" checked="checked"> user <br>
