--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -9,6 +9,7 @@
 
 <form th:action="@{/user}" method="POST">
     name : <input type="text" name="name"> <br>
+    phone : <input type="text" name="phone"> <br>
     password : <input type="password" name="password"> <br>
     <input type="radio" name="auth" value="ROLE_ADMIN,ROLE_USER"> admin
     <input type="radio" name="auth" value="ROLE_USER" checked="checked"> user <br>
