--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Sign Up</h1> <hr>
 
-<form th:action="@{/user}" method="POST">
+<form th:action="@{/api/user/join}" method="POST">
     name : <input type="text" name="name"> <br>
     phone : <input type="text" name="phone"> <br>
     password : <input type="password" name="password"> <br>
